# visual-system-designer-app

./: .ci.yml  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  vsd.py
.github/workflows/: workflow.yml
demo/: stm32-led-thermometer.json
demo/blinky-temperature/: CMakeLists.txt  prj.conf
demo/blinky-temperature/src/: main.c
demo/shell/: prj.conf
demo/shell/src/: main.c
demo/templates/blinky-temperature/: CMakeLists.txt
demo/templates/blinky-temperature/src/: main.c  utils.c  utils.h
renode-templates/: run.resc
scripts/: build.py  parse_graph.py  simulate.py  specification.py  vsd_backend.py
tools/: modify_specification.py  requirements.txt  validate.py
vsd/: __main__.py  backend.py  build.py  env.py  generate.py  graph.py  init.py  simulate.py  specification.py  utils.py
vsd/scripts/: get_zephyr_sdk.sh  init_zephyr.sh  setup.sh
vsd/spec_mods/: interactive.json
